# http-proxy-mock

./: .env  Cargo.toml  Dockerfile  Taskfile.yml  rust-toolchain  rustfmt.toml
src/: config.rs  lib.rs  routes.rs  state.rs
src/controller/proxy/: routes.rs
src/service/proxy/: service.rs
tests/: commons.rs
